<resources>
    <string name="app_name">heX</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Erstellen</string>
    <string name="nav_header_subtitle">erstellen@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="toolbar_title">heXApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Candidates Details</string>
    <string name="menu_ward">Ward</string>
    <string name="menu_survey">Feedback Form</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_news">News</string>
    <string name="home_second">Home Second</string>
    <string name="spacecraft_name">Spacecraft Name</string>


    <string name="sign_out">Sign Out</string>
    <string name="send_button_label">Send</string>
    <string name="title_activity_home">home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    //home activity
    <string name="button_create_room">Create a chat room</string>
    <string name="button_view_room_list">View existing rooms</string>
    <string name="title_activity_room_creation">Create Room</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_welcome">welcomeActivity</string>


</resources>
