<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hex.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.hex.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hex.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hex.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_ward"
        android:name="com.example.hex.ui.ward.WardFragment"
        android:label="@string/menu_ward"
        tools:layout="@layout/ward_fragment" />
    <fragment
        android:id="@+id/nav_survey"
        android:name="com.example.hex.ui.surveyform.SurveyFormFragment"
        android:label="@string/menu_survey"
        tools:layout="@layout/survey_form_activity" />
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.hex.ui.aboutus.AboutusFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/aboutus_fragment" />
    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.hex.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/news_fragment" />



</navigation>